# X-AE-A-12

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release-drafter.yml  test-pypi.yml  test.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/x_ae_a_12/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
