[tool.poetry]
name = "x-ae-a-12"
version = "0.1.0"
description = "The X AE A-12 Python project"
authors = ["Spencer Ofwiti <maxspencer56@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SpencerOfwiti/X-AE-A-12"
repository = "https://github.com/SpencerOfwiti/X-AE-A-12"
keywords = ["X-AE-A-12", "X AE A-12", "x-ae-a-12", "x ae a-12"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"

[tool.poetry.scripts]
x-ae-a-12 = "x_ae_a_12.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["x_ae_a_12"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
