[tool.poetry]
name = "x-ae-a-12"
version = "0.1.0"
description = "The X-AE-A-12 Python project"
authors = ["Spencer Ofwiti <maxspencer56@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SpencerOfwiti/X-AE-A-12"
repository = "https://github.com/SpencerOfwiti/X-AE-A-12"
keywords = ["X-AE-A-12", "X AE A-12", "x-ae-a-12", "x ae a-12"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"
desert = "^2020.1.6"
marshmallow = "^3.6.0"
pytest-mock = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
black = "^19.10b0"
flake8 = "^3.8.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.770"
pytype = {version = "^2020.5.13", python = "3.7"}
typeguard = "^2.7.1"
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.3.0"
xdoctest = "^0.12.0"
sphinx = "^3.0.3"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.1.1"

[tool.poetry.scripts]
x-ae-a-12 = "x_ae_a_12.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src.x_ae_a_12"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
